# Copyright (c) 2006 Software Laboratory, SAMSUNG Electronics, Inc.
# All rights reserved.
# Orignal by Jin-mook Lim <jinmook.lim@samsung.com>
#            Bum-seok Lee <bumseok.lee@samsung.com>
# Created by Jaekyun Lee <jkyun.lee@samsung.com>
# Modified by Heechul jeon <heechul.jeon@samsung.com>

SUBDIRS =

if GST_EXT_USE_EXT_HLSDEMUX2
SUBDIRS += hlsdemux2
endif



